# falcon-exposure-management-universal-reporter

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  example.env  pyproject.toml
.github/workflows/: bandit.yaml  pylint-ondemand.yml  test.yml
docs/schemas/: README.md  applications.schema.json  applications.xsd  assessments.schema.json  assessments.xsd  host_map.schema.json  host_map.xsd  manifest-aggregate.schema.json  manifest-aggregate.xsd  manifest-by-aid.schema.json  manifest-by-aid.xsd  manifest.schema.json  manifest.xsd  vulnerabilities.schema.json  vulnerabilities.xsd
scripts/: build-airgap.sh
